<resources>
    <string name="app_name">阿克曼皮肤医生</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_open">open</string>
    <string name="drawer_close">close</string>
    <string name="back">返回</string>
    <string name="cancel">取消</string>
    <string name="password">密码</string>
    <string name="confirm_password">确认密码</string>
    <string name="confirm_register">确认注册</string>
    <string name="setting_password">设置密码</string>
    <string name="login">登录</string>
    <string name="sign_out">退出登录</string>
    <string name="registered">注册阿克曼皮肤医生</string>
    <string name="login_app">登录阿克曼皮肤医生</string>
    <string name="input_mobile_number">填写手机号</string>
    <string name="get_sercurity_code">获取验证码</string>
    <string name="or_third_login">或使用其他登录方式登录</string>
    <string name="setting_yours_password">设置您的密码</string>
    <string name="input_security_code">填写验证码</string>
    <string name="please_input">请填写验证码</string>
    <string name="sercurity_code">验证码</string>
    <string name="finish">完成</string>
    <string name="reset_sercurity_code">60秒后重新发送验证码</string>
    <string name="voice_code">短信收不到？尝试语音验证码</string>
    <string name="next">下一步</string>
    <string name="reset_password">找回密码</string>
    <string name="reset_your_password">重新设置您的密码</string>
    <string name="retrieve_password">找回密码</string>
    <string name="retrieve_input_mobile_number">请填写您注册时的手机号并验证</string>
    <string name="fast_registered">快速注册</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="mDoctorListTitleLabel">找医生</string>
    <string name="mFamousDoctorTitleLabel">名医馆</string>
    <string name="historical_records">历史病历</string>
    <string name="save">保存</string>

    <string name="addphoto">添加照片</string>
    <string name="addphoto_sub_title">病症部分，检查报告或其他病情资料</string>
    <string name="disease_description">病症描述</string>
    <string name="disease_description_sub_title">请详细描述您的症状</string>
    <string name="disease_description_edit_content">请详细描述您的问题，包括身体状况、疾病和症状等，我们将会推荐最专业的医生为您服务、并且保证您的隐私安全(最少10个字)</string>
    <string name="add_new_patient">添加新的问诊人</string>
    <string name="submit">提交</string>
    <string name="doctorsrecommend_interview_people">问诊人  :</string>


    <string name="experience">10年经验</string>
    <string name="doctor_name">李晓清</string>
    <string name="doctor_post">神经内科主任医生</string>
    <string name="hospital">中国医学科学院心血管医院</string>
    <string name="good_at">擅长：10年皮肤看诊经验，擅长皮肤炎症</string>
    <string name="price">0元/次</string>
    <string name="clinic">今天义诊</string>
    <string name="post">主任</string>
    <string name="doctor_hosptial">上海交通大学附属医院</string>
    <string name="doctor_introduction">医生简介</string>
    <string name="title_activity_doctor_info">DoctorInfoActivity</string>
    <string name="doctor_introduction_centent">1961年8月出生。教授，博士，博士生导师。现任天津医科大学总医院院长，神经外科主任， 天津市神经病学研究所所长，加拿大蒙特利尔神经病学研究所高级顾问，并是神经外科学科带头人。已发表学术论文100多篇，参编专著多部， 是“十一”高教部教材《外科学》副主编。培养硕士生20名，博士生12名。 先后被评为卫生部和天津市卫生局优秀青年专业技术人员、天津市和医科大学跨世纪人才、新世纪人才、天津市“十五”重点建设学科资助人选、天津市“131”工程第一层次人才。 近年来承担国家科技部(973课题)、国家自然科学基金委、卫生部、天津市科委、教委的多项科研课题。多次获得天津市科技二等奖等多项科研奖励。</string>
    <string name="user_evaluation">用户评价</string>
    <string name="all_evaluation">全部评价</string>
    <string name="comment_list">评论列表</string>
    <string name="user_tel_number">131****6205</string>
    <string name="user_evaluation_content">好评</string>
    <string name="famous_inquiry">名医问诊：</string>
    <string name="currency_unit">元/次</string>
    <string name="to_inquiry">我要问诊</string>
    <string name="mBalanceLabel">账户余额</string>
    <string name="mBalanceInLabel">充值</string>
    <string name="mBalanceOutLabel">转出</string>
    <string name="mMenuBalanceDetailLabel">查看明细</string>
    <string name="mProfileAboutUsLabel">关于我们</string>
    <string name="mProfileNoticeSettingLabel">消息通知</string>
    <string name="mProfileIntegralLabel">我的积分</string>
    <string name="mProfileBalanceDetailLabel">余额明细</string>
    <string name="mProfileInterrogationUserLabel">健康档案</string>
    <string name="mProfileRechargeModeLabel">充值方式</string>
    <string name="mProfileUserDetailLabel">我的资料</string>
    <string name="mInterrogationUsernameLabel">爸爸</string>


    <!--通话界面所需要的文案-->
    <string name="str_recorder_normal">按住 说话</string>
    <string name="str_recorder_recording">松开 结束</string>
    <string name="str_recorder_want_cancel">松开手指 取消发送</string>

    <string name="content">1961年8月出生。教授，博士，博士生导师。现任天津医科大学总医院院长，神经外科主任， 天津市神经病学研究所所长，加拿大蒙特利尔神经病学研究所高级顾问，并是神经外科学科带头人。已发表学术论文100多篇，参编专著多部， 是“十一”高教部教材《外科学》副主编。培养硕士生20名，博士生12名。 先后被评为卫生部和天津市卫生局优秀青年专业技术人员、天津市和医科大学跨世纪人才、新世纪人才、天津市“十五”重点建设学科资助人选、天津市“131”工程第一层次人才。 近年来承担国家科技部(973课题)、国家自然科学基金委、卫生部、天津市科委、教委的多项科研课题。多次获得天津市科技二等奖等多项科研奖励。1961年8月出生。教授，博士，博士生导师。现任天津医科大学总医院院长，神经外科主任， 天津市神经病学研究所所长，加拿大蒙特利尔神经病学研究所高级顾问，并是神经外科学科带头人。已发表学术论文100多篇，参编专著多部， 是“十一”高教部教材《外科学》副主编。培养硕士生20名，博士生12名。 先后被评为卫生部和天津市卫生局优秀青年专业技术人员、天津市和医科大学跨世纪人才、新世纪人才、天津市“十五”重点建设学科资助人选、天津市“131”工程第一层次人才。 近年来承担国家科技部(973课题)、国家自然科学基金委、卫生部、天津市科委、教委的多项科研课题。多次获得天津市科技二等奖等多项科研奖励。1961年8月出生。教授，博士，博士生导师。现任天津医科大学总医院院长，神经外科主任， 天津市神经病学研究所所长，加拿大蒙特利尔神经病学研究所高级顾问，并是神经外科学科带头人。已发表学术论文100多篇，参编专著多部， 是“十一”高教部教材《外科学》副主编。培养硕士生20名，博士生12名。 先后被评为卫生部和天津市卫生局优秀青年专业技术人员、天津市和医科大学跨世纪人才、新世纪人才、天津市“十五”重点建设学科资助人选、天津市“131”工程第一层次人才。 近年来承担国家科技部(973课题)、国家自然科学基金委、卫生部、天津市科委、教委的多项科研课题。多次获得天津市科技二等奖等多项科研奖励。</string>
    <string name="note_content">\n方法：
　　\n(1) 备齐用物，标本容器上贴好标签，核对无误后向患者解释以取得合作。露出患者手臂，选择静脉，于静脉穿刺部位上方约4-6cm处扎紧止血带，并嘱患者握紧拳头，使静脉充盈显露。
　　\n(2) 常规消毒皮肤，待干。
    </string>

    <string name="checking_note">检查详情</string>
    <string name="drug_detail">药品详情</string>
    <string name="indications_symptoms">主治症状</string>
    <string name="specification">规格包装</string>
    <string name="patient_comment">对医生的诊疗，写下您的建议意见吧。</string>
    <string name="submit_comment">提交评价</string>
    <string name="comment_for_doctor">医生评价</string>
    <string name="title_activity_platform_list">健康资讯</string>
    <string name="post_content">正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文正文</string>
    <string name="posted">发帖</string>
    <string name="post_detail">帖子详情</string>
    <string name="reply">回复</string>
    <string name="add_photo">添加图片</string>
    <!-- 图片浏览 -->
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>


    <string name="all_readed">全部标记为已读</string>
    <string name="delete_all">全部清除</string>
    <string name="doctor_reply">医生回复提醒</string>
    <string name="reply_setting">回复通知</string>
    <string name="advisory_message">资讯消息</string>
    <string name="spread_message">推广消息</string>
    <string name="current_balance">当前余额：</string>

    <string name="my_doctor">我的医生</string>
    <string name="my_integral">我的积分：</string>
    <string name="myInfo">我的资料</string>
    <string name="share_to_people">分享给小伙伴们</string>
    <string name="share">分享</string>
    <string name="about">Copyright ©Ackerman.cn</string>
    <string name="change_name">修改昵称</string>

    <string name="Paydescription">*付费说明\n确认购买后，请耐心等待医生接诊。若超过24小时未接诊，系统将自动为您退款。</string>
    <string name="paydescription">*付费说明\n【开始问诊】后，请等待阿克曼皮肤医生电话4006718821，若医生繁忙，超过时长系统将自动退款。</string>

    <string name="feed_back">意见反馈</string>
    <string name="feed_back_title">感谢您使用阿克曼皮肤医生，我们将竭诚为您提供优质的服务。</string>
    <string name="user_feed_content">请写下您对阿克曼皮肤医生的意见和建议，我们将认真倾听。及时修改不足，以便让您使用更加便捷，谢谢！</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_messages_content">MessagesContentActivity</string>
    <string name="title_activity_my_doctor">MyDoctorActivity</string>

    <string name="suggest_detail">1.喝白水\n2.吃白素丸*每日2次*每次一粒\n3.建议检验血常规</string>
</resources>
