<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/setting_yours_password_cancel"
        style="@style/textstyle_blue"
        android:layout_marginLeft="@dimen/margin_left_16dp"
        android:text="@string/cancel" />

    <TextView
        android:id="@+id/setting_password_title"
        android:layout_centerHorizontal="true"
        android:text="@string/setting_password"
        style="@style/text_style_small" />

    <TextView
        android:id="@+id/setting_yours_password"
        style="@style/text_style_black"
        android:layout_below="@+id/setting_password_title"
        android:layout_centerHorizontal="true"
        android:text="@string/setting_yours_password" />

    <EditText
        android:id="@+id/input_yours_pwd"
        style="@style/edittext_style"
        android:layout_below="@+id/setting_yours_password"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/confirm_yours_pwd"
        style="@style/edittext_style"
        android:inputType="textPassword"
        android:layout_below="@+id/input_yours_pwd"
        android:hint="@string/confirm_password" />

    <Button
        android:id="@+id/confirm_register"
        style="@style/button_style"
        android:layout_below="@+id/confirm_yours_pwd"
        android:text="@string/confirm_register" />


</RelativeLayout>