<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/retrieve_pwd_cancel"
        style="@style/textstyle_blue"
        android:layout_marginLeft="@dimen/margin_left_16dp"
        android:text="@string/cancel" />


    <TextView
        android:id="@+id/retrieve_pwd_title"
        style="@style/text_style_small"
        android:layout_centerHorizontal="true"
        android:text="@string/retrieve_password" />

    <TextView
        android:id="@+id/retrieve_pwd_by_mobile"
        style="@style/text_style_black"
        android:layout_below="@+id/retrieve_pwd_title"
        android:layout_centerHorizontal="true"
        android:text="@string/retrieve_input_mobile_number" />

    <EditText
        android:id="@+id/retrieve_pwd_edit"
        style="@style/edittext_style"
        android:inputType="number"
        android:layout_below="@+id/retrieve_pwd_by_mobile"
        android:hint="@string/input_mobile_number" />

    <Button
        android:id="@+id/retrieve_get_code"
        style="@style/button_style"
        android:layout_below="@+id/retrieve_pwd_edit"
        android:text="@string/get_sercurity_code" />
</RelativeLayout>