<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp"
        android:weightSum="10">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/addphoto"
            android:textColor="@color/title_color"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/addphoto_sub_title"
            android:textColor="@color/sub_title"
            android:textSize="16sp" />

        <ImageView
            android:id="@+id/interrogation_imagview_photoID"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@drawable/rounded_edite"
            android:scaleType="center"
            android:src="@drawable/ic_pic" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:text="@string/disease_description"
            android:textColor="@color/title_color"
            android:textSize="17sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="3dp"
            android:text="@string/disease_description_sub_title"
            android:textColor="@color/sub_title"
            android:textSize="16sp" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:background="@drawable/rounded_edite">

            <EditText
                android:id="@+id/interrogation_edittext_explanationID"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@null"
                android:gravity="left"
                android:hint="@string/disease_description_edit_content"
                android:maxLength="300"
                android:paddingBottom="5dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="5dp"
                android:textCursorDrawable="@null"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/interrogation_textview_wordnumID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_marginBottom="3dp"
                android:paddingBottom="5dp"
                android:paddingRight="10dp"
                android:text="0/300"
                android:textColor="@color/sub_title"
                android:textSize="16sp" />
        </FrameLayout>

        <Button
            android:id="@+id/interrogation_button_nextID"
            style="@style/button_style"
            android:layout_marginTop="10dp"
            android:text="@string/next" />
    </LinearLayout>
</LinearLayout>