<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center">

        <FrameLayout
            android:id="@+id/head_portrait_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/margin_left_8dp"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/doctoe_head_portrait"
                android:layout_width="72dp"
                android:layout_height="72dp"
                android:background="@drawable/ic_default_doctor" />

            <TextView
                android:id="@+id/experience"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/doctoe_head_portrait"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_marginTop="@dimen/margin_top_8dp"
                android:background="@drawable/button_style_blue"
                android:text="@string/experience" />

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/head_portrait_layout"
            android:layout_marginLeft="5dp"
            android:layout_toRightOf="@+id/head_portrait_layout"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_weight="1"
                android:orientation="vertical">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/doctor_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/doctor_name"
                        android:textColor="@color/title_color"
                        android:textSize="@dimen/font_size_20sp" />

                    <TextView
                        android:id="@+id/doctor_post"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="@string/doctor_post"
                        android:textColor="@color/title_color"
                        android:textSize="@dimen/font_size_14sp" />
                </LinearLayout>

                <TextView
                    android:id="@+id/hospital"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:text="@string/hospital"
                    android:textColor="@color/font_color"
                    android:textSize="@dimen/font_size_14sp" />

                <TextView
                    android:id="@+id/doctor_good_at"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:maxEms="11"
                    android:maxLines="2"
                    android:text="@string/good_at"
                    android:textColor="@color/edit_text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/price" />

                <TextView
                    android:id="@+id/clinic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_style_red"
                    android:paddingLeft="4dp"
                    android:paddingRight="4dp"
                    android:text="@string/clinic"
                    android:textColor="@color/widgets_general_row_normal" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>
</android.support.v7.widget.CardView>