<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

    <FrameLayout
        android:id="@+id/head_portrait_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginLeft="@dimen/margin_left_8dp"
        android:gravity="center"
        android:orientation="vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/doctoe_head_portrait"
            android:layout_width="72dp"
            android:layout_height="72dp"
            android:src="@drawable/ic_default_doctor" />

        <TextView
            android:id="@+id/post"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/doctoe_head_portrait"
            android:layout_gravity="center_horizontal|bottom"
            android:background="@drawable/button_style_blue"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="@string/post"
            android:textColor="@color/white" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/content_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@+id/head_portrait_layout"
        android:orientation="vertical"
        android:paddingLeft="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/doctor_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/doctor_name"
                android:textColor="@color/title_color"
                android:textSize="@dimen/font_size_20sp" />

            <TextView
                android:id="@+id/doctor_post"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/doctor_name"
                android:layout_marginLeft="5dp"
                android:layout_toRightOf="@+id/doctor_name"
                android:text="@string/doctor_post"
                android:textColor="@color/title_color"
                android:textSize="@dimen/font_size_14sp" />
        </LinearLayout>


        <TextView
            android:id="@+id/hospital"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/doctor_name"
            android:layout_below="@+id/doctor_name"
            android:layout_marginTop="2dp"
            android:text="@string/hospital"
            android:textColor="@color/font_color"
            android:textSize="@dimen/font_size_14sp" />

        <TextView
            android:id="@+id/doctor_good_at"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignEnd="@+id/recommended_layout"
            android:layout_alignLeft="@+id/hospital"
            android:layout_alignRight="@+id/recommended_layout"
            android:layout_below="@+id/hospital"
            android:layout_marginTop="2dp"
            android:maxEms="12"
            android:maxLines="2"
            android:text="@string/good_at"
            android:textColor="@color/edit_text" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/recommended_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/content_layout"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="16dp"
        android:layout_marginRight="@dimen/margin_top_16dp"
        android:layout_marginTop="@dimen/margin_top_16dp"
        android:background="@drawable/recommended"
        android:gravity="center"
        android:orientation="vertical">


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center">

            <ImageView
                android:id="@+id/finger"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:src="@drawable/ic_finger" />

            <TextView
                android:id="@+id/recommended_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="3dp"
                android:layout_toRightOf="@+id/finger"
                android:text="95"
                android:textColor="@color/red" />
        </RelativeLayout>

        <TextView
            android:id="@+id/recommended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/red"
            android:paddingLeft="4dp"
            android:paddingRight="4dp"
            android:text="推荐指数"
            android:textColor="@color/widgets_general_row_normal" />
    </LinearLayout>

</RelativeLayout>