<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F1F0EE"
    android:orientation="vertical">

    <include layout="@layout/layout_toolbar"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/background_color"
        android:padding="@dimen/padding_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:text="@string/mBalanceLabel"
            android:textSize="@dimen/font_size_16sp" />

        <TextView
            android:id="@+id/validAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="100元"
            android:textColor="@color/red" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/widgets_general_row_line"/>

    <RelativeLayout
        android:id="@+id/user_recharge"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/widgets_general_row_select"
        android:padding="@dimen/padding_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/mBalanceInLabel"
            android:textSize="@dimen/font_size_16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/action_row" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:background="@color/widgets_general_row_line"/>

    <RelativeLayout
        android:id="@+id/withdraw"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@drawable/widgets_general_row_select"
        android:padding="@dimen/padding_8dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/mBalanceOutLabel"
            android:textSize="@dimen/font_size_16sp" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/action_row" />
    </RelativeLayout>
</LinearLayout>
